# paperclip-next

./: .gitignore  ALL_PHASES_COMPLETE.md  ARCHITECTURAL_CONCERNS.md  BENCHMARKS.md  BUNDLE_API_EXAMPLES.md  BUNDLE_QUICK_REFERENCE.md  CLAUDE.md  CSSOM_ALIGNMENT.md  Cargo.toml  FEATURE_COMPARISON.md  LOADERS.md  NAMESPACING_IMPLEMENTATION.md  PARSER_IMPLEMENTATION_COMPLETE.md  PHASES_COMPLETE.md  PHASE_3_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PROGRESS.md  REACT_COMPILER_SUMMARY.md  README.md  SEMANTIC_IDENTITY_RULES.md  SPIKES_IMPLEMENTATION_COMPLETE.md  SPIKE_0.5_COMPLETE.md  STATUS.md  SUMMARY.md  TESTING.md  VISION_CLI_INTEGRATION.md  VISION_COMPLETE.md  build-loaders.sh  dev.sh  package-lock.json  package.json  test-parse.pc
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json
client/src/: main.ts  vdom.ts
docs/: ARCHITECTURE_CONSTITUTION.md  ARCHITECTURE_QUESTIONS.md  BUNDLE_FIXES.md  CLI_SUMMARY.md  COMPLETION_SUMMARY.md  CSS_COMPILER_SUMMARY.md  CSS_SYNTAX.md  IDENTITY_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_IMPLEMENTATION_COMPLETE.md  NAMESPACING_EXAMPLE.md  README_UPDATES.md  RECURSION_BEHAVIOR.md  SEMANTIC_IDENTITY_DESIGN.md  SEMANTIC_IDENTITY_PROGRESS.md  SPIKES_IMPLEMENTATION_COMPLETE.md  SPIKE_0.10_COMPLETE.md  SPIKE_0.12_COMPLETE.md  SPIKE_0.4_COMPLETE.md  SPIKE_0.5_COMPLETE.md  TESTING.md  VISION_SUCCESS.md  WASM_BUILD_COMPLETE.md
docs/architecture/: PHASE_1_COMPLETE.md  README.md  collaboration.md  editor-crate.md  source-maps-implementation.md  source-maps-organization.md  source-maps-quick-reference.md  source-maps-starter-scaffold.md
docs/examples/: workspace-editor-integration.md
docs/plans/: 2026-01-27-feat-paperclip-next-full-rewrite-plan.md  2026-01-28-feat-workspace-rendering-client-libraries-plan.md  2026-01-29-feat-vscode-extension-live-preview-plan.md  2026-01-29-refactor-architecture-foundation-review-plan.md  2026-02-01-feat-tool-overlay-frame-resizer-plan.md  2026-02-02-feat-multi-designer-session-sync-plan.md  2026-02-03-feat-style-editing-pane-plan.md  2026-02-03-feat-universal-frontend-builder-plan.md
docs/spikes/: SPIKE_0.2_HOT_RELOAD.md  SPIKE_0.3_SLOTS.md  SPIKE_0.4_VARIANTS.md  SPIKE_0.6_0.7_CONTROL_FLOW.md  SUMMARY.md
docs/todos/: architecture-refactor.md
examples/: README.md  broken.pc  button.pc  comprehensive-features.pc  live-component-test.pc  setup.sh  simple.pc  test-a11y.pc  test-latency.pc  test-link.pc  test-lint.pc
examples/basic/: button.pc  card.pc  tokens.pc
examples/vite-react/: README.md  index.html  package.json  vite.config.ts
examples/vite-react/src/: App.css  App.tsx  index.css  vite-env.d.ts
examples/vite-react/src/components/: Button.pc  Card.pc  Feature.pc  Hero.pc
examples/webpack-react/: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
examples/webpack-react/public/: index.html
examples/webpack-react/src/: App.css  App.tsx  index.css
examples/workspace-machine-demo/: README.md  index.html  package.json
examples/workspace-machine-demo/src/: App.tsx  WorkspaceDemo.css  WorkspaceDemo.tsx  index.css
libs/evaluator/: Cargo.toml
libs/evaluator/benches/: evaluator_bench.rs
libs/evaluator/src/: context.rs  css.rs  evaluator.rs  graph.rs  html.rs  lib.rs  tests_comprehensive.rs  vdom.rs
libs/parser/: Cargo.toml  README.md
libs/parser/benches/: parser_bench.rs
libs/parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  tests.rs  tokenizer.rs
libs/proto/: Cargo.toml
libs/proto/src/: ast.rs  lib.rs  virt.rs
libs/workspace/: Cargo.toml  build.rs
libs/workspace/src/: lib.rs  mutations.rs  proto.rs  serializer.rs  server.rs  watcher.rs
proto/: patches.proto  vdom.proto  workspace.proto
test-components/: test-button.pc  test-card.pc
test-vision/: manifest.json
test-vision-all/: manifest.json
test-vision-mobile/: manifest.json
