[workspace]
resolver = "2"
members = [
    "packages/parser",
    "packages/evaluator",
    "packages/workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paperclip Team"]
license = "MIT"

[workspace.dependencies]
# Parser dependencies
logos = "0.14"
chumsky = "0.9"
bumpalo = { version = "3.14", features = ["collections"] }
ariadne = "0.4"  # Error reporting

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.1"
chrono = "0.4"
tokio-stream = "0.1"

# Testing
criterion = "0.5"
