[workspace]
resolver = "2"
members = [
    "packages/common",
    "packages/semantics",
    "packages/bundle",
    "packages/parser",
    "packages/editor",
    "packages/evaluator",
    "packages/workspace",
    "packages/inference",
    "packages/compiler-react",
    "packages/compiler-css",
    "packages/compiler-html",
    "packages/linter",
    "packages/cli",
    "packages/wasm",
    "packages/vision",
    "packages/sourcemap",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paperclip Team"]
license = "MIT"

[workspace.dependencies]
# Parser dependencies
logos = "0.14"
chumsky = "0.9"
bumpalo = { version = "3.14", features = ["collections"] }
ariadne = "0.4"  # Error reporting

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.1"
chrono = "0.4"
tokio-stream = "0.1"

# Source maps
sourcemap = "8.0"

# Testing
criterion = "0.5"

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"

# WASM release profile - optimized for size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
