[package]
name = "paperclip-evaluator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
paperclip-parser = { path = "../parser" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "evaluator_bench"
harness = false
