[package]
name = "paperclip-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser for Paperclip .pc files"

[dependencies]
paperclip-proto = { path = "../proto" }
logos.workspace = true
chumsky.workspace = true
bumpalo.workspace = true
ariadne.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
